Larger mariobg height, fixed hero unit padding and spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,10 +17,14 @@
     background-color: rgba(49, 54, 58, 0.5);
     color: white;
     border-radius: 6px;
-    padding-top: 5px;
+    padding: 15px;
 }
 
+.transbox h1 { margin-top: 0; letter-spacing: normal; }
+.transbox p:last-child { margin-bottom: 0; }
+
 .mariobg {
+    height: 300px;
     background-image: url("../img/mario-bg.jpg");
     background-size: auto 100%;
     background-position: center;
